--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-svg": "^16.1.34"
+    "react-router-dom": "^6.24.1",
+    "react-svg": "^16.1.34",
+    "sass": "^1.77.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
